--- a/config/main.cfg
+++ b/config/main.cfg
@@ -1,7 +1,8 @@
-[File Paths]
+[Paths]
 token_file_path = ./config/token.key
 # Path must not exist (it creates on run)
 logger_cfg-file_path = ./config/logger.json
+commands_dir = ./commands/
 
 [Main Settings]
 command_prefix = !
