Renew of Framework
This commit is compatible with the V1.1 and is made with new Features

Signed-off-by: TheJoSam <65750856+TheJoSam@users.noreply.github.com>

--- a/config/main.cfg
+++ b/config/main.cfg
@@ -1,8 +1,38 @@
-[Paths]
-token_file_path = ./config/token.key
-# Path must not exist (it creates on run)
-logger_cfg-file_path = ./config/logger.json
-commands_dir = ./commands/
+[Main]
+# Set Prefix for all prefix and bridge commands
+prefix = !
+# This Bot uses an *.key file to keep the Token secret
+# WARNING if encryption is enabled do not just copy the token in the file
+#         the token must be inserted via the key_setup.py file
+# Set the path to the file here
+key_file = ./data/keys/token.key
 
-[Main Settings]
-command_prefix = !
+[Paths]
+# All Paths are watched on the root level (where main.py is located)
+# Select the LOGS folder for all modules (can create custom Log files)
+log_folder = ./logs
+logger_cfg_file = ./config/logger.json
+key_template = ./data/templates/key.json
+key_register = ./data/keys.csv
+enigma_cfg_file = ./config/enigma.cfg
+
+[Key_system]
+### [EXPERIMENTAL!][Coming Soon]
+# This option sets the type of the key register
+# possible options: CSV or SQL
+# CSV: Saves key register in an CSV file (easy to read)
+# SQL: Saves key register in database this makes an one Database solutions possible
+#      or making grouping possible [NOT FUNCTIONAL]
+key_register_type = csv
+
+# This option sets if the TUID type 1 generated for the key should be added
+# to the end of the path when saving. This does not disable the TUID option
+# in key files that will still be added to register for finding keys faster
+append_tuid = false
+
+# This option sets if the Keys should be encrypted
+# WARNING this encrypts every Key generated and read!
+# The option below will set the encryption key
+# if this file does not exist it will be created
+encryption = true
+encryption_key = ./data/keys/encrypt_key.key
