--- a/config/user_register.cfg
+++ b/config/user_register.cfg
@@ -1,14 +1,17 @@
-[Main]
-encryption = true # This is optional but strongly recommended if disabled a message to every user that joins or inputs data will be send!
+[Register]
+# This option sets the type of Register that should be used
+# CSV: All data is stored in an *.csv file. This format can be imported in almost all
+#      Excel like applications
+# SQL: All data is stored in either an SQLite3 Database file or in an Database Server
+#      Database Servers are not natively supported at the moment but can be added in
+#      the SQL loader [EXPERMIMENTAL!][Coming Soon!]
+type = CSV
 
-[Functions]
-# Here you can disable single functions.
-# Keep in mind that some functions need others to function!
-
-# Main functions
-add_user = true
-get_user-duid = true
-
-# internal functions (WARNING: these can break some stuff)
-get_length = true
-check_for_id = true
+[Encryption]
+# This option sets if all data written except the TUID should be encrypted
+# WARNING this needs an specified Key and if this Key is changed the Data is
+# not readable anymore!
+# The option below sets the path to the Key if this file is not created this will
+# be created with an random Key (can be the same as main key)
+enabled = true
+key_path = ./data/keys/encrypt_key.key
